# clubdenker

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  additional_features.md  dashboards.md  idea.md  log.md  rechnung_facts.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a7bd51899af_add_geloescht_am_to_mitglieder.py  24685f883256_add_audit_log_dsgvo_kostenstellen_.py  77b9491321ce_add_trainer_lizenzen_table.py  81ffc3647034_add_eingangsrechnungen_table.py  8912f74a08fe_add_skonto_and_versand_fields.py  898efe4fb8bf_add_protokolle_table.py  db1c9f8f0f32_initial_models.py  e560917f6926_add_training_and_attendance_models.py  e6e5b7df8262_add_finance_and_communication_models.py  e7e4de2b9dc9_add_freigabelimit_and_parent_buchung_id.py  fd493e37c0cf_expand_rechnung_model_for_legal_.py
backend/src/sportverein/: config.py  main.py
backend/src/sportverein.egg-info/: SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_config.py  test_mcp_api_integration.py  test_models.py
backend/tests/test_api/: test_agents.py  test_audit.py  test_auth.py  test_chat.py  test_dashboard.py  test_dashboard_views.py  test_datev_export.py  test_dokumente.py  test_dsgvo_deletion.py  test_eingangsrechnungen.py  test_engagement.py  test_finanzen.py  test_health.py  test_kostenstellen.py  test_mitglieder.py  test_security.py  test_setup.py  test_trainer_lizenzen.py  test_training.py
backend/tests/test_mcp/: test_tools_audit.py  test_tools_beitraege.py  test_tools_beitraege_full.py  test_tools_dashboard.py  (+8 more)
spawn_doc/: log.md  (+3 more)
(+186 files in other folders)
